orders management - adding/delete part done !

--- a/src/assets/style2.css
+++ b/src/assets/style2.css
@@ -44,7 +44,7 @@ input, button {
   background-size: cover;
   overflow: auto;
   /*font-family: "Open Sans", Helvetica, Arial, sans-serif;*/
-  margin-top: 80px;
+/*  margin-top: 80px;*/
 }
 
 .demo {
