--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -2,8 +2,9 @@
 /* Workspace Application-wide Styles */
 @import "~/bootstrap-icons/font/bootstrap-icons.css";
 @import "~/flag-icons/css/flag-icons.min.css";
-@import '~/mdb-ui-kit/css/mdb.min.css';
-@import '~/vue-select/dist/vue-select.css';
+@import "~/mdb-ui-kit/css/mdb.min.css";
+@import "~/vue-select/dist/vue-select.css";
+@import "~/vuetify/dist/vuetify.min.css";
 @font-face {
     font-family: 'Poiret';
     src: url('./fonts/poiret-one/PoiretOne.eot');
