--- a/src/assets/style2.css
+++ b/src/assets/style2.css
@@ -162,7 +162,7 @@ input, button {
   width: 100%;
   height: 4rem;
   margin: 5rem 0 2.2rem;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.8) !important;
   background: #FF3366;
   font-size: 1.5rem;
   border-radius: 3rem;
