--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,7 @@
 #app {
   /*max-width: 1280px;
   margin: 0 auto;*/
-  padding: 2rem;
+/*  padding: 2rem;*/
 
   font-weight: normal;
 }
@@ -27,7 +27,8 @@ body {
     height: 100%;
     justify-content: center;
     align-content: center;
-    padding: 0 2rem;
+/*    padding: 0 2rem;*/
+    flex-direction: column;
   }
   
 @media (hover: hover) {
