--- a/src/assets/style2.css
+++ b/src/assets/style2.css
@@ -49,10 +49,10 @@ input, button {
 
 .demo {
   position: absolute;
-  top: 50%;
+/*  top: 50%;*/
   left: 50%;
   margin-left: -15rem;
-  margin-top: -26.5rem;
+/*  margin-top: -26.5rem;*/
   width: 30rem;
   height: 53rem;
   overflow: hidden;
