--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -3,8 +3,9 @@
 @import "~/bootstrap-icons/font/bootstrap-icons.css";
 @import "~/flag-icons/css/flag-icons.min.css";
 @import "~/mdb-ui-kit/css/mdb.min.css";
-@import "~/vue-select/dist/vue-select.css";
+/*@import "~/vue-select/dist/vue-select.css";*/
 @import "~/vuetify/dist/vuetify.min.css";
+@import "~/@mdi/font/css/materialdesignicons.css";
 @font-face {
     font-family: 'Poiret';
     src: url('./fonts/poiret-one/PoiretOne.eot');
@@ -97,6 +98,9 @@ button:disabled {
 
 main {
     width: 100%;
+    top: 0;
+    position: absolute;
+    height: 100%;
 }
 
 main.mt-3{
@@ -445,15 +449,18 @@ main.mt-3{
 
 .content {
     display: flex;
-    margin-top: 330px;
-    margin-bottom: 100px;
+    margin-top: 100px;
+    min-height: calc(100% - 100px);
     padding-left: 265px;
     flex-direction: column;
 }
 
 .fullContent {
     display: flex;
-    margin-top: 570px;
+    position: relative;
+    margin-top: 100px;
+    min-height: calc(100% - 100px);
+    height: inherit;
     flex-direction: column;
 }
 
@@ -794,7 +801,7 @@ i.smallIcons {
 }
 
 .footer > div {
-    background: url('./resources/imgs/Website-Background_footer_GIF.gif') no-repeat;
+    background: url('./imgs/Website-Background_footer_GIF.gif') no-repeat;
     width: 100%;
     background-size: 100% 203px;
     display: flex;
